set zsh as default shell in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,9 @@ setw -g pane-base-index 1
 # renumber-windows after window close
 set-option -g renumber-windows on
 
+# set zsh as default shell
+set-option -g default-shell /usr/bin/zsh
+
 # ----------------below is thoughtbot-----------------
 # # improve colors
 # set -g default-terminal 'screen-256color'
